# boson

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile.workspace  LICENSE  README.md  create-workspace.sh  docker-compose.base.yml  flintml-quickstart.sh  update-common-lib.sh  workspace-entrypoint.sh
.github/workflows/: pr-check.yml  release.yml
assets/examples/example-instacart/: create_features.ipynb  explore_data.ipynb  load_data.ipynb  train_model.ipynb
assets/static/: boson-logo.psd
delta-explorer/: Dockerfile  app.py  pyproject.toml  scan_deltalake.py
docs/: builtins.md  concepts.md  example-instacart.md  reference.md
docs/examples/instacart/: walkthrough.html  walkthrough.ipynb
examples/: instacart.ipynb
examples/local-worker/: .env
examples/local-worker/bundle/: worker.yaml
kernel/: Dockerfile  jupyter_notebook_config.py  mount-cloud-storage.sh  pyproject.toml
kernel/jupyter-lab-ext/delta-explorer/: package.json  webpack.config.js
kernel/jupyter-lab-ext/delta-explorer/src/: index.ts
kernel/jupyter-lab-ext/experiment-tracker/src/: index.ts
kernel/jupyter-lab-ext/theme/: package.json  webpack.config.js
kernel/jupyter-lab-ext/theme/src/: index.ts
kernel/jupyter-lab-ext/theme/style/: base.css
kernel/kernel/: globals.py
nginx/: default.conf
quick/flintml-v0.1.23/: docker-compose.v0.1.23.yml  worker.v0.1.23.yaml
quick/quicker/flintml-v0.1.24/: docker-compose.v0.1.24.yml  worker.v0.1.24.yaml
src/: .env.example  docker-compose.build.yml  docker-compose.dev.yml  docker-compose.release-template.yml  docker-compose.yml  worker.example.yaml
src/catalog-explorer/: Dockerfile  app.py  entrypoint.sh  pyproject.toml
src/catalog-explorer/templates/: index.html
src/common-lib/flint/: pyproject.toml
src/common-lib/flint/flint/: __init__.py  catalog.py  delta.py  editor.py  experiment.py  fs.py
src/compute-manager/: Dockerfile  Dockerfile-old  entrypoint.sh  pyproject.toml  validate_worker_config.py  worker-config-schema.json
src/compute-manager/src/: main.py
src/compute-manager/src/driver/: base.py  local.py
src/experiment-server/: Dockerfile  entrypoint.sh  init-server.sh
src/experiment-tracker/: Dockerfile  entrypoint.sh
src/kernel/: Dockerfile  pyproject.toml
src/kernel/startup/: watchdog.py
src/nginx/: default.conf
src/reverse-proxy/: Dockerfile  default.conf
src/storage/: Dockerfile  config.json  entrypoint.sh  init-entrypoint.sh
src/worker-base/: Dockerfile  pyproject.toml
src/worker-base/startup/: entrypoint.sh  watchdog.py
src/workspace/: Dockerfile  entrypoint.sh  pyproject.toml
src/workspace/backend/: __init__.py  jupyter_notebook_config.py  provisioner.py
src/workspace/backend/jupyter-lab-ext/catalog-explorer/: package.json
src/workspace/backend/jupyter-lab-ext/catalog-explorer/src/: index.ts
src/workspace/backend/jupyter-lab-ext/experiment-tracker/: package.json  webpack.config.js
src/workspace/backend/jupyter-lab-ext/experiment-tracker/src/: index.ts
src/workspace/backend/jupyter-lab-ext/theme/: tsconfig.json  webpack.config.js
src/workspace/backend/jupyter-lab-ext/theme/src/: custom.d.ts  index.ts
src/workspace/backend/jupyter-lab-ext/theme/style/: base.css
src/workspace/backend/remote-kernel/: kernel.json
storage/: config.json
workspaces/example-instacart/: .env  docker-compose.override.yml  pyproject.toml
