[project]
name = "streamlit-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Harry",email = "harry@myntlabs.io"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.44.1,<2.0.0)",
    "deltalake (>=0.25.5,<0.26.0)",
    "boto3 (>=1.37.37,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "polars (>=1.27.1,<2.0.0)",
    "streamlit-autorefresh (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
