[tool.poetry]
name = "catalog-explorer"
version = "0.1.0"
description = "Allows for visual exploration around the Flint catalog."

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
fastapi = "^0.115.12"
jinja2 = "^3.1.6"
uvicorn = "^0.34.3"
flint = { path = "../common-lib/flint", develop = false }
