[tool.poetry]
name = "workspace"
version = "0.1.0"
description = ""
packages = [
    { include = "backend" }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
jupyterlab = "^4.4.0"
ipydatagrid = "^1.4.0"
jupyterlab-widgets = "^3.0.14"
ipywidgets = "^8.1.6"
jupyterlab-lsp = "^5.1.0"
python-lsp-server = { version = "^1.12.2", extras = ["all"] }
python-lsp-ruff = "^2.2.2"
perspective-python = "^3.5.1"
flint = { path = "../common-lib/flint", develop = false }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."jupyter_client.kernel_provisioners"]
remote-provisioner = "backend.provisioner:RemoteContainerProvisioner"